--- a/src/main/resources/fxml/sample.fxml
+++ b/src/main/resources/fxml/sample.fxml
@@ -1,29 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<TabPane prefHeight="300.0" prefWidth="750.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<TabPane prefHeight="320.0" prefWidth="750.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <tabs>
+      <Tab text="Замовлення">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="292.0" prefWidth="750.0">
+               <children>
+                  <Label alignment="CENTER" layoutX="201.0" layoutY="14.0" prefHeight="20.0" prefWidth="112.0" text="Бронь">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TableView layoutX="9.0" layoutY="36.0" prefHeight="181.0" prefWidth="472.0">
+                    <columns>
+                        <TableColumn prefWidth="36.0" text="ID" />
+                        <TableColumn prefWidth="69.0" text="День" />
+                      <TableColumn prefWidth="52.0" text="Час" />
+                      <TableColumn prefWidth="79.0" text="Зал" />
+                        <TableColumn prefWidth="81.0" text="Стіл" />
+                        <TableColumn prefWidth="72.0" text="Замовник" />
+                        <TableColumn prefWidth="82.0" text="Номер тел." />
+                    </columns>
+                  </TableView>
+                  <TableView layoutX="493.0" layoutY="36.0" prefHeight="181.0" prefWidth="248.0">
+                     <columns>
+                        <TableColumn prefWidth="55.0" text="ID броні" />
+                        <TableColumn prefWidth="86.0" text="Назва" />
+                        <TableColumn prefWidth="49.0" text="К-сть" />
+                        <TableColumn minWidth="9.0" prefWidth="57.0" text="Ціна" />
+                     </columns>
+                  </TableView>
+                  <Label alignment="CENTER" layoutX="561.0" layoutY="14.0" prefHeight="20.0" prefWidth="112.0" text="Замовлення">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="fieldId1" layoutX="9.0" layoutY="217.0" maxWidth="75.0" minHeight="30.0" prefHeight="30.0" prefWidth="32.0" />
+                  <TextField fx:id="fieldId111111" layoutX="322.0" layoutY="217.0" maxWidth="82.0" minHeight="30.0" prefHeight="30.0" prefWidth="70.0" />
+                  <TextField fx:id="fieldId1111111" layoutX="392.0" layoutY="217.0" maxWidth="90.0" minHeight="30.0" prefHeight="30.0" prefWidth="90.0" />
+                  <Button layoutX="244.0" layoutY="247.0" minHeight="30.0" minWidth="80.0" mnemonicParsing="false" onMouseClicked="#onClickApply" prefHeight="30.0" prefWidth="148.0" text="Додати/застосувати" />
+                  <Button layoutX="393.0" layoutY="247.0" minHeight="30.0" minWidth="88.0" mnemonicParsing="false" onMouseClicked="#onClickDelete" prefHeight="30.0" prefWidth="89.0" text="Видалити" />
+                  <ChoiceBox layoutX="493.0" layoutY="217.0" prefHeight="30.0" prefWidth="57.0" />
+                  <ChoiceBox layoutX="551.0" layoutY="216.0" prefHeight="31.0" prefWidth="80.0" />
+                  <TextField fx:id="fieldId11111111" layoutX="631.0" layoutY="217.0" maxWidth="90.0" minHeight="30.0" prefHeight="30.0" prefWidth="50.0" />
+                  <TextField fx:id="fieldId111111111" layoutX="681.0" layoutY="217.0" maxWidth="90.0" minHeight="30.0" prefHeight="30.0" prefWidth="59.0" />
+                  <Button layoutX="494.0" layoutY="247.0" minHeight="30.0" minWidth="80.0" mnemonicParsing="false" onMouseClicked="#onClickApply" prefHeight="30.0" prefWidth="157.0" text="Додати/застосувати" />
+                  <Button layoutX="652.0" layoutY="247.0" minHeight="30.0" minWidth="88.0" mnemonicParsing="false" onMouseClicked="#onClickDelete" prefHeight="30.0" prefWidth="89.0" text="Видалити" />
+                  <ChoiceBox layoutX="41.0" layoutY="217.0" prefHeight="30.0" prefWidth="71.0" />
+                  <ChoiceBox layoutX="112.0" layoutY="217.0" prefHeight="30.0" prefWidth="50.0" />
+                  <ChoiceBox layoutX="162.0" layoutY="217.0" prefHeight="30.0" prefWidth="83.0" />
+                  <ChoiceBox layoutX="244.0" layoutY="217.0" prefHeight="30.0" prefWidth="78.0" />
+               </children>
+            </AnchorPane>
+        </content>
+      </Tab>
         <Tab text="Товари">
             <content>
                 <AnchorPane>
                     <children>
-                        <TableView onMouseClicked="#onClickTableView" fx:id="tableProduct" minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="377.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <TableView fx:id="tableProduct" minHeight="0.0" minWidth="0.0" onMouseClicked="#onClickTableView" prefHeight="100.0" prefWidth="377.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <columns>
-                                <TableColumn minWidth="-Infinity" prefWidth="75.0" text="ID" fx:id="idColumn" />
-                                <TableColumn prefWidth="75.0" text="Ім'я товара" fx:id="nameColumn"  />
-                                <TableColumn prefWidth="75.0" text="Тип" fx:id="typeColumn"  />
-                                <TableColumn prefWidth="75.0" text="Оптова ціна" fx:id="wholesalePriceColumn"  />
-                                <TableColumn prefWidth="75.0" text="Роздрібна ціна" fx:id="retailPriceColumn"  />
-                                <TableColumn prefWidth="75.0" text="Постачальник" fx:id="providerColumn"  />
-                                <TableColumn prefWidth="75.0" text="Кількість" fx:id="countColumn"  />
+                                <TableColumn fx:id="idColumn" minWidth="-Infinity" prefWidth="75.0" text="ID" />
+                                <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Ім'я товара" />
+                                <TableColumn fx:id="typeColumn" prefWidth="75.0" text="Тип" />
+                                <TableColumn fx:id="priceColumn" prefWidth="106.0" text="Роздрібна ціна" />
+                                <TableColumn fx:id="countColumn" prefWidth="104.0" text="Кількість" />
                             </columns>
                         </TableView>
                         <AnchorPane maxHeight="50.0" prefHeight="30.0" prefWidth="200.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
@@ -31,45 +83,45 @@
                                 <TextField fx:id="fieldId" layoutY="2.0" maxWidth="75.0" minHeight="30.0" prefHeight="30.0" prefWidth="149.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                 <TextField fx:id="fieldName" maxHeight="30.0" maxWidth="75.0" minHeight="30.0" AnchorPane.leftAnchor="75.0" AnchorPane.topAnchor="0.0" />
                                 <TextField fx:id="fieldType" maxWidth="75.0" minHeight="30.0" prefHeight="30.0" AnchorPane.leftAnchor="150.0" />
-                                <TextField fx:id="fieldWholesalePrice" maxHeight="30.0" maxWidth="75.0" prefHeight="30.0" AnchorPane.leftAnchor="225.0" />
-                                <TextField fx:id="fieldRetailPrice" minHeight="30.0" prefWidth="75.0" AnchorPane.leftAnchor="300.0" />
-                                <TextField fx:id="fieldProvider" maxHeight="30.0" maxWidth="75.0" minHeight="30.0" AnchorPane.leftAnchor="375.0" />
-                                <TextField fx:id="fieldCount" maxWidth="75.0" minHeight="30.0" AnchorPane.leftAnchor="450.0" />
-                                <Button onMouseClicked="#onClickApply" layoutX="525.0" layoutY="3.0" minHeight="30.0" minWidth="80.0" mnemonicParsing="false" text="Додати/застосувати" AnchorPane.leftAnchor="525.0" AnchorPane.topAnchor="0.0" />
-                                <Button onMouseClicked="#onClickDelete" layoutX="651.0" layoutY="2.0" minHeight="30.0" minWidth="100.0" mnemonicParsing="false" text="Видалити" AnchorPane.leftAnchor="650.0" AnchorPane.topAnchor="0.0" />
+                                <TextField fx:id="fieldRetailPrice" layoutX="225.0" minHeight="30.0" prefHeight="30.0" prefWidth="107.0" AnchorPane.leftAnchor="225.0" />
+                                <TextField fx:id="fieldCount" layoutX="332.0" maxWidth="110.0" minHeight="30.0" prefHeight="30.0" prefWidth="101.0" AnchorPane.leftAnchor="332.0" />
+                                <Button layoutX="433.0" minHeight="30.0" minWidth="80.0" mnemonicParsing="false" onMouseClicked="#onClickApply" text="Додати/застосувати" AnchorPane.leftAnchor="433.0" AnchorPane.topAnchor="0.0" />
+                                <Button layoutX="558.0" minHeight="30.0" minWidth="100.0" mnemonicParsing="false" onMouseClicked="#onClickDelete" text="Видалити" AnchorPane.leftAnchor="558.0" AnchorPane.topAnchor="0.0" />
                             </children>
                         </AnchorPane>
                     </children>
                 </AnchorPane>
             </content>
         </Tab>
-        <Tab text="Постачальники">
+        <Tab text="Категорії товарів">
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="343.0">
                     <children>
                         <TableView prefHeight="271.0" prefWidth="500.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <columns>
-                                <TableColumn prefWidth="75.0" text="C1" />
-                                <TableColumn prefWidth="75.0" text="C2" />
+                                <TableColumn prefWidth="75.0" text="ID" />
+                                <TableColumn prefWidth="117.0" text="Назва категорії" />
                             </columns>
                         </TableView>
                     </children>
                 </AnchorPane>
             </content>
         </Tab>
-        <Tab text="Склади">
-            <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                    <children>
-                        <TableView prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="C1" />
-                                <TableColumn prefWidth="75.0" text="C2" />
-                            </columns>
-                        </TableView>
-                    </children>
-                </AnchorPane>
-            </content>
-        </Tab>
+      <Tab text="Столи">
+         <content>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="343.0">
+               <children>
+                  <TableView prefHeight="271.0" prefWidth="500.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <columns>
+                        <TableColumn prefWidth="75.0" text="ID" />
+                        <TableColumn prefWidth="75.0" text="Назва залу" />
+                        <TableColumn prefWidth="149.0" text="Назва столу (номер)" />
+                        <TableColumn prefWidth="149.0" text="Ціна бронювання" />
+                     </columns>
+                  </TableView>
+               </children>
+            </AnchorPane>
+         </content>
+      </Tab>
     </tabs>
 </TabPane>
