--- a/src/main/resources/fxml/sample.fxml
+++ b/src/main/resources/fxml/sample.fxml
@@ -22,23 +22,22 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TableView layoutX="9.0" layoutY="36.0" prefHeight="181.0" prefWidth="472.0">
+                  <TableView fx:id="tableOrder" layoutX="9.0" layoutY="36.0" prefHeight="181.0" prefWidth="472.0">
                     <columns>
-                        <TableColumn prefWidth="36.0" text="ID" />
-                        <TableColumn prefWidth="69.0" text="День" />
-                      <TableColumn prefWidth="52.0" text="Час" />
-                      <TableColumn prefWidth="79.0" text="Зал" />
-                        <TableColumn prefWidth="81.0" text="Стіл" />
-                        <TableColumn prefWidth="72.0" text="Замовник" />
-                        <TableColumn prefWidth="82.0" text="Номер тел." />
+                        <TableColumn fx:id="idOrderColumn" prefWidth="36.0" text="ID" />
+                        <TableColumn fx:id="dateOrderColumn" prefWidth="69.0" text="День" />
+                      <TableColumn fx:id="timeOrderColumn" prefWidth="52.0" text="Час" />
+                      <TableColumn fx:id="hallOrderColumn" prefWidth="79.0" text="Зал" />
+                        <TableColumn fx:id="tableOrderColumn" prefWidth="81.0" text="Стіл" />
+                        <TableColumn fx:id="customerOrderColumn" prefWidth="72.0" text="Замовник" />
+                        <TableColumn fx:id="telephoneOrderColumn" prefWidth="82.0" text="Номер тел." />
                     </columns>
                   </TableView>
                   <TableView layoutX="493.0" layoutY="36.0" prefHeight="181.0" prefWidth="248.0">
                      <columns>
-                        <TableColumn prefWidth="55.0" text="ID броні" />
-                        <TableColumn prefWidth="86.0" text="Назва" />
-                        <TableColumn prefWidth="49.0" text="К-сть" />
-                        <TableColumn minWidth="9.0" prefWidth="57.0" text="Ціна" />
+                        <TableColumn fx:id="nameOrderColumn" prefWidth="112.0" text="Назва" />
+                        <TableColumn fx:id="countOrderColumn" prefWidth="70.0" text="К-сть" />
+                        <TableColumn fx:id="priceOrderColumn" minWidth="9.0" prefWidth="65.0" text="Ціна" />
                      </columns>
                   </TableView>
                   <Label alignment="CENTER" layoutX="561.0" layoutY="14.0" prefHeight="20.0" prefWidth="112.0" text="Замовлення">
@@ -46,21 +45,20 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="fieldId1" layoutX="9.0" layoutY="217.0" maxWidth="75.0" minHeight="30.0" prefHeight="30.0" prefWidth="32.0" />
-                  <TextField fx:id="fieldId111111" layoutX="322.0" layoutY="217.0" maxWidth="82.0" minHeight="30.0" prefHeight="30.0" prefWidth="70.0" />
-                  <TextField fx:id="fieldId1111111" layoutX="392.0" layoutY="217.0" maxWidth="90.0" minHeight="30.0" prefHeight="30.0" prefWidth="90.0" />
-                  <Button layoutX="244.0" layoutY="247.0" minHeight="30.0" minWidth="80.0" mnemonicParsing="false" onMouseClicked="#onClickApply" prefHeight="30.0" prefWidth="148.0" text="Додати/застосувати" />
-                  <Button layoutX="393.0" layoutY="247.0" minHeight="30.0" minWidth="88.0" mnemonicParsing="false" onMouseClicked="#onClickDelete" prefHeight="30.0" prefWidth="89.0" text="Видалити" />
-                  <ChoiceBox layoutX="493.0" layoutY="217.0" prefHeight="30.0" prefWidth="57.0" />
-                  <ChoiceBox layoutX="551.0" layoutY="216.0" prefHeight="31.0" prefWidth="80.0" />
-                  <TextField fx:id="fieldId11111111" layoutX="631.0" layoutY="217.0" maxWidth="90.0" minHeight="30.0" prefHeight="30.0" prefWidth="50.0" />
-                  <TextField fx:id="fieldId111111111" layoutX="681.0" layoutY="217.0" maxWidth="90.0" minHeight="30.0" prefHeight="30.0" prefWidth="59.0" />
-                  <Button layoutX="494.0" layoutY="247.0" minHeight="30.0" minWidth="80.0" mnemonicParsing="false" onMouseClicked="#onClickApply" prefHeight="30.0" prefWidth="157.0" text="Додати/застосувати" />
-                  <Button layoutX="652.0" layoutY="247.0" minHeight="30.0" minWidth="88.0" mnemonicParsing="false" onMouseClicked="#onClickDelete" prefHeight="30.0" prefWidth="89.0" text="Видалити" />
-                  <ChoiceBox layoutX="41.0" layoutY="217.0" prefHeight="30.0" prefWidth="71.0" />
-                  <ChoiceBox layoutX="112.0" layoutY="217.0" prefHeight="30.0" prefWidth="50.0" />
-                  <ChoiceBox layoutX="162.0" layoutY="217.0" prefHeight="30.0" prefWidth="83.0" />
-                  <ChoiceBox layoutX="244.0" layoutY="217.0" prefHeight="30.0" prefWidth="78.0" />
+                  <TextField fx:id="fieldIdOrder" layoutX="9.0" layoutY="217.0" maxWidth="75.0" minHeight="30.0" prefHeight="30.0" prefWidth="32.0" />
+                  <TextField fx:id="fieldCustomerOrder" layoutX="322.0" layoutY="217.0" maxWidth="82.0" minHeight="30.0" prefHeight="30.0" prefWidth="70.0" />
+                  <TextField fx:id="fieldTelephoneOrder" layoutX="392.0" layoutY="217.0" maxWidth="90.0" minHeight="30.0" prefHeight="30.0" prefWidth="90.0" />
+                  <Button fx:id="id8" layoutX="244.0" layoutY="247.0" minHeight="30.0" minWidth="80.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="148.0" text="Додати/застосувати" />
+                  <Button fx:id="id9" layoutX="393.0" layoutY="247.0" minHeight="30.0" minWidth="88.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="89.0" text="Видалити" />
+                  <ChoiceBox fx:id="fieldNameCheck" layoutX="494.0" layoutY="216.0" prefHeight="31.0" prefWidth="105.0" />
+                  <TextField fx:id="fieldCountCheck" layoutX="600.0" layoutY="217.0" maxWidth="90.0" minHeight="30.0" prefHeight="30.0" prefWidth="74.0" />
+                  <TextField fx:id="fieldPriceCheck" layoutX="675.0" layoutY="217.0" maxWidth="90.0" minHeight="30.0" prefHeight="30.0" prefWidth="65.0" />
+                  <Button fx:id="id13" layoutX="494.0" layoutY="247.0" minHeight="30.0" minWidth="80.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="157.0" text="Додати/застосувати" />
+                  <Button fx:id="id14" layoutX="652.0" layoutY="247.0" minHeight="30.0" minWidth="88.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="89.0" text="Видалити" />
+                  <ChoiceBox fx:id="fieldDateOrder" layoutX="41.0" layoutY="217.0" prefHeight="30.0" prefWidth="71.0" />
+                  <ChoiceBox fx:id="fieldTimeOrder" layoutX="112.0" layoutY="217.0" prefHeight="30.0" prefWidth="50.0" />
+                  <ChoiceBox fx:id="fieldHallOrder" layoutX="162.0" layoutY="217.0" prefHeight="30.0" prefWidth="83.0" />
+                  <ChoiceBox fx:id="fieldTableOrder" layoutX="244.0" layoutY="217.0" prefHeight="30.0" prefWidth="78.0" />
                </children>
             </AnchorPane>
         </content>
@@ -69,24 +67,24 @@
             <content>
                 <AnchorPane>
                     <children>
-                        <TableView fx:id="tableProduct" minHeight="0.0" minWidth="0.0" onMouseClicked="#onClickTableView" prefHeight="100.0" prefWidth="377.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <TableView fx:id="tableProduct" minHeight="0.0" minWidth="0.0" onMouseClicked="#onClickProductTableView" prefHeight="100.0" prefWidth="377.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <columns>
-                                <TableColumn fx:id="idColumn" minWidth="-Infinity" prefWidth="75.0" text="ID" />
-                                <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Ім'я товара" />
-                                <TableColumn fx:id="typeColumn" prefWidth="75.0" text="Тип" />
-                                <TableColumn fx:id="priceColumn" prefWidth="106.0" text="Роздрібна ціна" />
-                                <TableColumn fx:id="countColumn" prefWidth="104.0" text="Кількість" />
+                                <TableColumn fx:id="idProductColumn" minWidth="-Infinity" prefWidth="75.0" text="ID" />
+                                <TableColumn fx:id="nameProductColumn" prefWidth="75.0" text="Ім'я товара" />
+                                <TableColumn fx:id="typeProductColumn" prefWidth="75.0" text="Тип" />
+                                <TableColumn fx:id="priceProductColumn" prefWidth="106.0" text="Роздрібна ціна" />
+                                <TableColumn fx:id="countProductColumn" prefWidth="104.0" text="Кількість" />
                             </columns>
                         </TableView>
                         <AnchorPane maxHeight="50.0" prefHeight="30.0" prefWidth="200.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                             <children>
-                                <TextField fx:id="fieldId" layoutY="2.0" maxWidth="75.0" minHeight="30.0" prefHeight="30.0" prefWidth="149.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                <TextField fx:id="fieldName" maxHeight="30.0" maxWidth="75.0" minHeight="30.0" AnchorPane.leftAnchor="75.0" AnchorPane.topAnchor="0.0" />
-                                <TextField fx:id="fieldType" maxWidth="75.0" minHeight="30.0" prefHeight="30.0" AnchorPane.leftAnchor="150.0" />
-                                <TextField fx:id="fieldRetailPrice" layoutX="225.0" minHeight="30.0" prefHeight="30.0" prefWidth="107.0" AnchorPane.leftAnchor="225.0" />
-                                <TextField fx:id="fieldCount" layoutX="332.0" maxWidth="110.0" minHeight="30.0" prefHeight="30.0" prefWidth="101.0" AnchorPane.leftAnchor="332.0" />
-                                <Button layoutX="433.0" minHeight="30.0" minWidth="80.0" mnemonicParsing="false" onMouseClicked="#onClickApply" text="Додати/застосувати" AnchorPane.leftAnchor="433.0" AnchorPane.topAnchor="0.0" />
-                                <Button layoutX="558.0" minHeight="30.0" minWidth="100.0" mnemonicParsing="false" onMouseClicked="#onClickDelete" text="Видалити" AnchorPane.leftAnchor="558.0" AnchorPane.topAnchor="0.0" />
+                                <TextField fx:id="fieldProductId" layoutY="2.0" maxWidth="75.0" minHeight="30.0" prefHeight="30.0" prefWidth="149.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                <TextField fx:id="fieldProductName" maxHeight="30.0" maxWidth="75.0" minHeight="30.0" AnchorPane.leftAnchor="75.0" AnchorPane.topAnchor="0.0" />
+                                <TextField fx:id="fieldProductType" maxWidth="75.0" minHeight="30.0" prefHeight="30.0" AnchorPane.leftAnchor="150.0" />
+                                <TextField fx:id="fieldProductPrice" layoutX="225.0" minHeight="30.0" prefHeight="30.0" prefWidth="107.0" AnchorPane.leftAnchor="225.0" />
+                                <TextField fx:id="fieldProductCount" layoutX="332.0" maxWidth="110.0" minHeight="30.0" prefHeight="30.0" prefWidth="101.0" AnchorPane.leftAnchor="332.0" />
+                                <Button layoutX="433.0" minHeight="30.0" minWidth="80.0" mnemonicParsing="false" onMouseClicked="#onClickProductApply" text="Додати/застосувати" AnchorPane.leftAnchor="433.0" AnchorPane.topAnchor="0.0" />
+                                <Button layoutX="558.0" minHeight="30.0" minWidth="100.0" mnemonicParsing="false" onMouseClicked="#onClickProductDelete" text="Видалити" AnchorPane.leftAnchor="558.0" AnchorPane.topAnchor="0.0" />
                             </children>
                         </AnchorPane>
                     </children>
